--- a/styles.css
+++ b/styles.css
@@ -3,5 +3,6 @@
 .holder{
 	display:flex;
 	flex-direction:row;
-     justify-content:space-evenly;
+    justify-content:space-evenly;
+	flex-wrap:wrap;
 }
